--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
@@ -18,6 +18,7 @@
         <div class="govuk-grid-column-two-thirds">
             <h2 class="govuk-heading-m">How to appeal</h2>
             <ol class="govuk-list govuk-list--number">
+                <li>Go to the <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="evidence-guidance">guidance for reviewing evidence page</a> to see a complete list of acceptable evidence types. If you haven’t received any evidence yet, contact the the parent or guardian. </li>
                 <li>Select 'Appeal now' on this page and provide the information requested. </li>
                 <li>Once completed, you will receive further instructions on how to send on supporting evidence to your local authority.</li>
             </ol>
@@ -35,6 +36,7 @@
         Appeal now
     </button>
 </form>
+<p>Alternatively, you can contact the Department for Education support desk at <a href="">ecs.admin@education.gov.uk </a>to request a separate check.</p>
 
 <div class="govuk-!-padding-bottom-2"></div>
 
