Updated page content. Link to feedback is left as null awaiting URL confirmation and will be revisited.

--- a/CheckYourEligibility-Parent/wwwroot/css/site.css
+++ b/CheckYourEligibility-Parent/wwwroot/css/site.css
@@ -54,3 +54,12 @@
 }
 
 /*END - back button overrides */
+
+caption {
+    color: black;
+}
+
+table {
+    caption-side: top;
+    border-collapse: collapse;
+}
