--- a/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
@@ -18,38 +18,59 @@
     ViewData["Title"] = "Application Sent";
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
+<div class="govuk-panel govuk-panel--confirmation">
+    <h1 class="govuk-panel__title">Application complete</h1>
+    <div class="govuk-panel__body">
+        Submitted on<br><strong>@responses[0].Data.Created.ToString("dd MMM yyyy, hh:mm")</strong>
+    </div>
+</div>
 
-<h1 class="govuk-heading-xl">Children Details Added</h1>
-
-<p>We have sent details for: </p>
-<table>
-    <thead>
-        <tr>
-            <th>Reference</th>
-            <th>Child Name</th>
-            <th>Child School</th>
+<table class="govuk-table">
+    <caption class="govuk-table__caption govuk-table__caption--m">
+        We have sent details for:
+    </caption>
+    <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header app-custom-class">Name</th>
+            <th scope="col" class="govuk-table__header app-custom-class">School</th>
+            <th scope="col" class="govuk-table__header app-custom-class">
+                Reference
+            </th>
         </tr>
     </thead>
-    <tbody>
+    <tbody class="govuk-table__body">
         @foreach (var response in responses)
         {
-            <tr>
-                <td>@response.Data.Reference</td>
-                <td>@response.Data.ChildFirstName @response.Data.ChildLastName</td>
-                <td>@response.Data.School.Name</td>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header">@response.Data.ChildFirstName @response.Data.ChildLastName</th>
+                <td class="govuk-table__cell">@response.Data.School.Name</td>
+                <td class="govuk-table__cell">@response.Data.Reference</td>
             </tr>
         }
     </tbody>
 </table>
 
+<p>
+    For any queries about the application, please write the reference numbers
+    down and discuss with your school administrator.
+</p>
 
+<h2 class="govuk-heading-m">What happens next</h2>
 
-<div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        <h2 class="govuk-heading-l">What happens next</h2>
-        <p>The school will email you when they have registered your details, and will arrange for your children's free school meals to start.</p>
-    </div>
-</div>
+<p>
+    The school(s) will contact you when they have registered the details into
+    their systems, and will arrange for your children’s free school meals to
+    start.
+</p>
+<p>If you do not receive an update, talk to the school administrator.</p>
+
+<p>
+    <a href="#">What did you think about this service?</a> (takes 30 seconds)
+</p>
+
+<a href="../account/start-now" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+    Finish and leave service
+</a>
 
 
 <script src="/js/validationSummary.js"></script>
