No JS Alert Box + School search wording changes

--- a/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
@@ -20,6 +20,12 @@
 
 <h1 class="govuk-heading-l">Check your answers before registering</h1>
 
+<noscript>
+<div class="govuk-body">
+    ! The school matches the URN you entered, but check this is your child's school
+</div>
+</noscript>
+
 <div class="govuk-summary-card">
     <div class="govuk-summary-card__title-wrapper">
         <h2 class="govuk-summary-card__title">
