--- a/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Enter_Child_Details.cshtml
@@ -16,10 +16,8 @@
 }
 
 <h1 class="govuk-heading-l" tabindex="-1">
-    Provide details of your children
+    Provide details of all children
 </h1>
-
-<p>Include all your children who are in compulsory education. You can use the add another option, if you have more than one child.</p>
 
 <form asp-controller="Check" asp-action="Enter_Child_Details" method="post" novalidate>
     <input type="hidden" id="ChildIndex" />
