--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -104,7 +104,7 @@
             <div class="govuk-radios" data-module="govuk-radios">
                 <div class="govuk-radios__item">
                     <input class="govuk-radios__input" asp-for="IsNinoSelected" type="radio" value="true" aria-controls="conditional-ni-number" aria-expanded="false" aria-label="Yes">
-                    <label class="govuk-label govuk-radios__label" for="ni-number">
+                    <label class="govuk-label govuk-radios__label" for="NationalInsuranceNumber">
                         Yes
                     </label>
                 </div>
