--- a/CheckYourEligibility-Parent/Views/Shared/_LayoutNoBackButton.cshtml
+++ b/CheckYourEligibility-Parent/Views/Shared/_LayoutNoBackButton.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@*  **** Layout changes will need to be duplicated in Views/Check/OutcomeNoJS ****
+    **** as the header and footer is hard coded in those files.               **** *@
+
+<!DOCTYPE html>
 <html lang="en" class="govuk-template">
 <head>
     <meta charset="utf-8">
