--- a/CheckYourEligibility-Parent/Views/Check/OutcomeNoJS/Could_Not_Check.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/OutcomeNoJS/Could_Not_Check.cshtml
@@ -1,7 +1,4 @@
-﻿@*  **** Layout changes will need to be duplicated in Views/Check/OutcomeNoJS ****
-    **** as the header and footer is hard coded in those files.               **** *@
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" class="govuk-template">
 <head>
     <meta charset="utf-8">
@@ -15,7 +12,6 @@
     <link href="~/css/application.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
-
 <body class="govuk-template__body">
     <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
     <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
@@ -56,7 +52,32 @@
             <main class="govuk-main-wrapper " id="main-content" role="main">
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
-                        @RenderBody()
+
+
+
+
+
+                        @* Outcome Content Start *@
+
+                        @* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+                        <a class="govuk-back-link-nolink"></a>
+
+                        <div class="govuk-grid-column-full">
+                            <h1 class="govuk-heading-l">We could not check your children’s entitlement to free school meals</h1>
+                            <p>You need to enter a National Insurance or asylum support reference number in order for the check to take place.</p>
+                            <p><a href="https://www.gov.uk/lost-national-insurance-number?">How to find your National Insurance number</a></p>
+                            <p>An asylum support reference number can usually be found on letters from the Home Office.</p>
+                            <p>If you need more help, please contact your school administrator.</p>
+
+
+                            <p><a href="../Check/Enter_Details">Try again</a></p>
+                        </div>
+
+                        @* Outcome Content End *@
+
+
+
+
                     </div>
                 </div>
             </main>
@@ -117,7 +138,5 @@
         import { initAll } from '../js/govuk-frontend.min.js'
         initAll()
     </script>
-
-    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
