--- a/CheckYourEligibility-Parent/Views/Check/OutcomeNoJS/Eligible.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/OutcomeNoJS/Eligible.cshtml
@@ -1,7 +1,4 @@
-﻿@*  **** Layout changes will need to be duplicated in Views/Check/OutcomeNoJS ****
-    **** as the header and footer is hard coded in those files.               **** *@
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" class="govuk-template">
 <head>
     <meta charset="utf-8">
@@ -15,7 +12,6 @@
     <link href="~/css/application.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
-
 <body class="govuk-template__body">
     <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
     <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
@@ -56,7 +52,63 @@
             <main class="govuk-main-wrapper " id="main-content" role="main">
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
-                        @RenderBody()
+
+
+
+
+
+                        @* Outcome Content Start *@
+
+                        @model string
+
+                        @* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+                        <a class="govuk-back-link-nolink"></a>
+
+                        <div class="govuk-grid-column-full">
+
+                            <h1 class="govuk-heading-l">Your children are entitled to free school meals</h1>
+
+                            <h2 class="govuk-heading-m">What to do next</h2>
+
+                            <p>To get free school meals for your children, follow these steps online. This usually takes a few minutes.</p>
+
+                            <ol>
+                                <li>Sign in or create a GOV.UK One Login account.</li>
+                                <li>Enter the details of all your children and their schools.</li>
+                                <li>Submit your application to send it to your school.</li>
+                                <li>We'll send you an email to the one you registered with to let you know it has been completed.</li>
+                                <li>Your childrens school will arrange the free school meals.</li>
+                            </ol>
+
+                            <details class="govuk-details">
+                                <summary class="govuk-details__summary">
+                                    <span class="govuk-details__summary-text">
+                                        About GOV.UK One Login
+                                    </span>
+                                </summary>
+                                <div class="govuk-details__text">
+                                    GOV.UK One Login lets you sign in and prove your identity quickly and easily. You can use the same account for some other government services.
+                                </div>
+                            </details>
+
+                            <a href="@Model" class="govuk-button govuk-!-margin-top-5">Continue to GOV.UK One Login</a>
+
+                            <hr class="govuk-section-break govuk-section-break govuk-section-break--l">
+
+                            <h2 class="govuk-heading-m">Further guidance and other ways to apply</h2>
+                            <p>If you need further support, <a target="_blank" href="/Home/Parental_Guidance">check the more detailed guidance</a>  for parents and guardians.</p>
+                            @* <p>If you cannot apply online, you can fill in <a href="/Home/fsm_print_version">the 'Free school meals entitlement checker' form</a> and give it to your children's school. </p> *@
+
+                            <div class="govuk-inset-text">
+                                It takes longer to apply through your school than it does online.
+                            </div>
+                        </div>
+
+                        @* Outcome Content End *@
+
+
+
+
                     </div>
                 </div>
             </main>
@@ -117,7 +169,5 @@
         import { initAll } from '../js/govuk-frontend.min.js'
         initAll()
     </script>
-
-    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
