--- a/CheckYourEligibility-Parent/Views/Check/OutcomeNoJS/Not_Found_Pending.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/OutcomeNoJS/Not_Found_Pending.cshtml
@@ -1,7 +1,4 @@
-﻿@*  **** Layout changes will need to be duplicated in Views/Check/OutcomeNoJS ****
-    **** as the header and footer is hard coded in those files.               **** *@
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" class="govuk-template">
 <head>
     <meta charset="utf-8">
@@ -15,7 +12,6 @@
     <link href="~/css/application.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
-
 <body class="govuk-template__body">
     <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
     <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
@@ -56,7 +52,37 @@
             <main class="govuk-main-wrapper " id="main-content" role="main">
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
-                        @RenderBody()
+
+
+
+
+
+                        @* Outcome Content Start *@
+
+                        @* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+                        <a class="govuk-back-link-nolink"></a>
+
+                        <div class="govuk-grid-column-full">
+                            <h1 class="govuk-heading-l">We could not check your children’s entitlement to free school meals</h1>
+                            <p>It’s possible that the Universal Credit statements needed to perform the check aren’t currently available.  </p>
+
+                            <h2 class="govuk-heading-m">What you can do</h2>
+                            <p>If you have up-to-date Universal Credit statements as supporting evidence, show these to your school’s administrator. </p>
+                            <p><strong>Important: </strong> Your annual net earned income must be no higher than £7,400.  </p>
+                            <p>Any documents you provide must show your income and the date. </p>
+                            <p>If you are an asylum seeker, check to see what asylum support is available. </p>
+
+                            <h3 class="govuk-heading-s">Further guidance </h3>
+                            <p>More in-depth information on supporting evidence can be found in the guidance notes for parents and guardians. </p>
+
+                            <p><a href="../Check/Enter_Details">Try again</a></p>
+                        </div>
+
+                        @* Outcome Content End *@
+
+
+
+
                     </div>
                 </div>
             </main>
@@ -117,7 +143,5 @@
         import { initAll } from '../js/govuk-frontend.min.js'
         initAll()
     </script>
-
-    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
