--- a/CheckYourEligibility-Parent/Views/Check/OutcomeNoJS/Technical_Error.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/OutcomeNoJS/Technical_Error.cshtml
@@ -1,7 +1,4 @@
-﻿@*  **** Layout changes will need to be duplicated in Views/Check/OutcomeNoJS ****
-    **** as the header and footer is hard coded in those files.               **** *@
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" class="govuk-template">
 <head>
     <meta charset="utf-8">
@@ -15,7 +12,6 @@
     <link href="~/css/application.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
-
 <body class="govuk-template__body">
     <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
     <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
@@ -56,7 +52,37 @@
             <main class="govuk-main-wrapper " id="main-content" role="main">
                 <div class="govuk-grid-row">
                     <div class="govuk-grid-column-two-thirds">
-                        @RenderBody()
+
+
+
+
+
+                        @* Outcome Content Start *@
+
+                        @model string
+
+                        @* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+                        <a class="govuk-back-link-nolink"></a>
+
+                        <div class="govuk-grid-column-full">
+
+                            <h1 class="govuk-heading-l">There’s been a technical error</h1>
+
+                            <p>We could not check your children’s entitlement to free school meals.</p>
+
+                            <p>Please try again later, making sure you’ve entered your details accurately.</p>
+
+                            <p>If you’ve received this message multiple times, contact your school administrator. </p>
+
+                            <p><a href="javascript:window.history.back()">Try again</a></p>
+
+                        </div>
+
+                        @* Outcome Content End *@
+
+
+
+
                     </div>
                 </div>
             </main>
@@ -117,7 +143,5 @@
         import { initAll } from '../js/govuk-frontend.min.js'
         initAll()
     </script>
-
-    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
