--- a/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
@@ -68,7 +68,7 @@
     <a href="#">What did you think about this service?</a> (takes 30 seconds)
 </p>
 
-<a href="../account/start-now" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+<a href="../" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
     Finish and leave service
 </a>
 
