--- a/CheckYourEligibility-Parent/Views/Home/Privacy.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewData["Title"] = "Privacy policy";
+    ViewData["Title"] = "Privacy Policy";
 }
 
 <a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
