--- a/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
@@ -26,17 +26,29 @@
                     <img src="~/images/dfe-logo.png" class="dfe-logo" alt="DfE Homepage">
                     <img src="~/images/dfe-logo-alt.png" class="dfe-logo-hover" alt="DfE Homepage">
                     <span class="dfe-header__service-name">
-                        @ViewData["ServiceName"]
+                        @(ViewData["ServiceName"] != null ? ViewData["ServiceName"] : "Check a family's eligibility")
                     </span>
                 </a>
             </div>
             <div class="dfe-header__content" id="content-header">
                 <ul class="dfe-header__action-links">
                     <li>
-                        @Html.ActionLink("Sign Out", "SignOut", "Account", null, new { @class = "signOut" })
+                        <a href="#">My account</a>
+                    </li>
+                    <li>
+                        @Html.ActionLink("Sign out", "SignOut", "Account", null, new { @class = "signOut" })
                     </li>
                 </ul>
             </div>
+            <nav id="header-navigation" class="dfe-header__navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
+                <ul class="dfe-header__navigation-list" id="navigation">
+                    <li class="dfe-header__navigation-item">
+                        <a class="dfe-header__navigation-link" href="/">
+                            Dashboard
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </header>
 
