--- a/CheckYourEligibility-Parent/Views/Shared/_LayoutNoBackButton.cshtml
+++ b/CheckYourEligibility-Parent/Views/Shared/_LayoutNoBackButton.cshtml
@@ -26,13 +26,25 @@
                     <img src="~/images/dfe-logo.png" class="dfe-logo" alt="DfE Homepage">
                     <img src="~/images/dfe-logo-alt.png" class="dfe-logo-hover" alt="DfE Homepage">
                     <span class="dfe-header__service-name">
-                        @ViewData["ServiceName"]
+                        @(ViewData["ServiceName"] != null ? ViewData["ServiceName"] : "Check a family's eligibility")
                     </span>
                 </a>
             </div>
-            <div class="dfe-header__content" id="content-header">
-                <ul class="dfe-header__action-links"></ul>
-            </div>
+            <nav id="header-navigation" class="dfe-header__navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
+                <div id="spacerForNoLinkContentRemoveWhenAddingLinksBelow" style="min-height: 10px;">
+                    @* Remove this content and surrounding div and style when adding in links. *@
+                </div>
+
+                @*<ul class="dfe-header__navigation-list" id="navigation">
+
+                <li class="dfe-header__navigation-item">
+                <a class="dfe-header__navigation-link" href="/">
+                Dashboard
+                </a>
+                </li>
+                </ul>*@
+
+            </nav>
         </div>
     </header>
 
