Change fix for finish and leave service URL as it has already been fixed by Sam so matching this code to his.

--- a/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
@@ -67,7 +67,7 @@
     <a href="#">What did you think about this service?</a> (takes 30 seconds)
 </p>
 
-<a href="@Url.Action("Index", "Home")" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+<a href="../" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
     Finish and leave service
 </a>
 
