removed extra '<' character shown upon error

--- a/CheckYourEligibility-Admin/Views/BulkUpload/BatchOutcome/Error_Data_Issue.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkUpload/BatchOutcome/Error_Data_Issue.cshtml
@@ -30,6 +30,6 @@
     </div>
 </div>
 <p class="govuk-body">Please make sure you’ve corrected the issues on these lines and upload the file again.</p>
-<p><a href="/TryAgain" onclick="history.back(); return false;">Try again</a>></p>
+<p><a href="/TryAgain" onclick="history.back(); return false;">Try again</a></p>
 <p><a href="@Url.Action("Index", "Home")">Return to dashboard</a></p>
 <p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
