alteration to a link in privacy satement

--- a/CheckYourEligibility-Parent/Views/Home/Privacy.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Privacy.cshtml
@@ -75,7 +75,7 @@
 </p>
 <ul>
     <li>
-        <a href="https://www.gov.uk/government/publications/privacy-information-children-and-young-people-under-18/privacy-information-children-and-young-people-under-18#using-your-data-to-protect-children-and-young-people">children and young people under 18 </a>
+        <a href="https://www.gov.uk/government/publications/privacy-information-children-and-young-people-under-18/privacy-information-children-and-young-people-under-18">children and young people under 18 </a>
     </li>
     <li>
         <a href="https://www.gov.uk/government/publications/privacy-information-early-years-foundation-stage-to-key-stage-3/privacy-information-early-years-foundation-stage-to-key-stage-3">early years foundation stage to key stage 3</a>
