--- a/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
@@ -3,7 +3,8 @@
 @{
     ViewData["Title"] = "Provide details of your children";
     var childIndex = TempData["childIndex"] as int?;
-    }
+    var validationMessage = TempData["ValidationMessage"] as string;
+ }
 
 @* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
@@ -94,12 +95,22 @@
                     <p class="govuk-error-message">
                         <span asp-validation-for="ChildList[i].School.Name"></span>
                     </p>
-                    <input id="school-search-@i" class="govuk-search govuk-input govuk-!-width-two-thirds" type="text" oninput="searchSchool(this.value, @i)" autocomplete="off" aria-label="School Search">
-                    <input hidden asp-for="ChildList[i].School.Name" id="ChildList[@i].School.Name" class="govuk-search govuk-input govuk-!-width-two-thirds" type="text" oninput="searchSchool(this.value, @i)" autocomplete="off" aria-label="School">
+                    <input id="school-search-@i" class="noJsRemove govuk-search govuk-input govuk-!-width-two-thirds" type="text" oninput="searchSchool(this.value, @i)" autocomplete="off" aria-label="School Search">
+                    <input asp-for="ChildList[i].School.Name" style="display:none;" id="ChildList[@i].School.Name" class="noJsShow govuk-search govuk-input govuk-!-width-two-thirds" type="text" oninput="searchSchool(this.value, @i)" autocomplete="off" aria-label="School">
                     <input hidden asp-for="ChildList[i].School.URN" id="ChildList[@i].School.URN" />
                     <input hidden asp-for="ChildList[i].School.Postcode" id="ChildList[@i].School.Postcode" />
                     <input hidden asp-for="ChildList[i].School.LA" id="ChildList[@i].School.LA" />
                     <ul id="schoolList@(@i)" class="govuk-!-width-two-thirds"></ul>
+                    <noscript>
+                        <style>
+                            .noJsRemove {
+                                display: none;
+                            }
+                            .noJsShow {
+                                display: inline-block!important;
+                            }
+                        </style>
+                    </noscript>
                 </fieldset>
                 <noscript>
                     <div govuk-body>
@@ -154,7 +165,7 @@
                                 <label class="govuk-label govuk-date-input__label" for="ch1-year">
                                     Year
                                 </label>
-                                <input asp-for="ChildList[i].Year" id="ChildList[@i].Year" data-type="dob"  class="govuk-input govuk-date-input__input govuk-input--width-2" type="text" inputmode="numeric" aria-label="Year">
+                                <input asp-for="ChildList[i].Year" id="ChildList[@i].Year" data-type="dob"  class="govuk-input govuk-date-input__input govuk-input--width-3" type="text" inputmode="numeric" aria-label="Year">
                             </div>
                         </div>
                     </div>
@@ -181,7 +192,6 @@
 
 <script src="/js/validationSummary.js"></script>
 <script src="/js/schoolSearch.js"></script>
-<script src="/js/focusChildNameInput.js"></script>
 <script type="text/javascript">
    document.addEventListener('DOMContentLoaded', function() {
     // Replace the label text
