--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -30,7 +30,7 @@
             <p class="govuk-error-message">
                 <span asp-validation-for="FirstName"></span>
             </p>
-            <input class="govuk-input govuk-!-width-two-thirds" asp-for="FirstName" type="text" aria-label="Your first name">
+            <input class="govuk-input govuk-!-width-two-thirds @(ViewData.ModelState["FirstName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" asp-for="FirstName" type="text" aria-label="Your first name">
         </div>
 
         <div class="govuk-form-group">
@@ -40,7 +40,7 @@
             <p class="govuk-error-message">
                 <span asp-validation-for="LastName"></span>
             </p>
-            <input class="govuk-input govuk-!-width-two-thirds" asp-for="LastName" type="text" aria-label="Your last name">
+            <input class="govuk-input govuk-!-width-two-thirds @(ViewData.ModelState["LastName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" asp-for="LastName" type="text" aria-label="Your last name">
         </div>
     </fieldset>
 
@@ -62,7 +62,7 @@
                         <label class="govuk-label govuk-date-input__label" for="Day">
                             Day
                         </label>
-                        <input class="govuk-input govuk-date-input__input govuk-input--width-2" asp-for="Day" id="Day" type="text" inputmode="numeric" maxlength="2" aria-label="Day" />
+                        <input class="govuk-input govuk-date-input__input govuk-input--width-2 @(ViewData.ModelState["Day"]?.Errors.Count > 0 || ViewData.ModelState["DateOfBirth"]?.Errors.Count > 0 ? "govuk-input--error" : "")" asp-for="Day" id="Day" type="text" inputmode="numeric" maxlength="2" aria-label="Day" />
                     </div>
                 </div>
 
@@ -71,7 +71,7 @@
                         <label class="govuk-label govuk-date-input__label" for="Month">
                             Month
                         </label>
-                        <input class="govuk-input govuk-date-input__input govuk-input--width-2" asp-for="Month" id="Month" type="text" inputmode="numeric" maxlength="2" aria-label="Month" />
+                        <input class="govuk-input govuk-date-input__input govuk-input--width-2 @(ViewData.ModelState["Month"]?.Errors.Count > 0 || ViewData.ModelState["DateOfBirth"]?.Errors.Count > 0 ? "govuk-input--error" : "")" asp-for="Month" id="Month" type="text" inputmode="numeric" maxlength="2" aria-label="Month" />
                     </div>
                 </div>
 
@@ -80,7 +80,7 @@
                         <label class="govuk-label govuk-date-input__label" for="Year">
                             Year
                         </label>
-                        <input class="govuk-input govuk-date-input__input govuk-input--width-4" asp-for="Year" id="Year" type="text" inputmode="numeric" maxlength="4" aria-label="Year" />
+                        <input class="govuk-input govuk-date-input__input govuk-input--width-4 @(ViewData.ModelState["Year"]?.Errors.Count > 0 || ViewData.ModelState["DateOfBirth"]?.Errors.Count > 0 ? "govuk-input--error" : "")" asp-for="Year" id="Year" type="text" inputmode="numeric" maxlength="4" aria-label="Year" />
                     </div>
                 </div>
             </div>
