Refactor previous commit with Rich to do it the right way.

--- a/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Application_Sent.cshtml
@@ -20,7 +20,7 @@
 <div class="govuk-panel govuk-panel--confirmation">
     <h1 class="govuk-panel__title">Application complete</h1>
     <div class="govuk-panel__body">
-        Submitted on<br><strong>@responses[0].Data.Created.ToString("dd MMM yyyy, hh:mm")</strong>
+        Submitted on<br><strong>@responses[0].Data.Created.ToString("dd MMM yyyy")</strong>
     </div>
 </div>
 
